fix: Popup was larger than screen on mobiles

--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@ body {
   top: 0;
   position: fixed;
   z-index: 5;
-  width: 100%;
+  width: 90%;
   height: 100%;
   display: block;
   background-color: white;
